# Rost

./: Cargo.toml  IMPROVEMENTS.md  INDEX.md  README.md  ROADMAP.md  SETUP_GUIDE.md  SETUP_SUMMARY.md  START_HERE.md
.claude/: settings.local.json
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: context.rs  lib.rs
crates/arch-x86_64/src/cpu/: gdt.rs  idt.rs  mod.rs  syscall.rs  tss.rs
crates/arch-x86_64/src/interrupts/: handlers.rs  mod.rs
crates/arch-x86_64/src/timer/: mod.rs  pic.rs
crates/core-kernel/: Cargo.toml
crates/core-kernel/src/: boot_info.rs  lib.rs
crates/core-kernel/src/ipc/: message.rs  mod.rs
crates/core-kernel/src/memory/: mod.rs  paging.rs  physical.rs
crates/core-kernel/src/process/: mod.rs  pcb.rs  table.rs
crates/core-kernel/src/scheduler/: mod.rs  round_robin.rs
crates/hal/: Cargo.toml
crates/hal/src/: uart.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: boot_collector.rs  main.rs
crates/kernel/src/shell/: commands.rs  escape.rs  history.rs  line_editor.rs  mod.rs
scripts/: build.sh  run.sh
src/: console.rs  cpu.rs  interrupts.rs  ipc.rs  main.rs  memory.rs  process.rs  scheduler.rs  timer.rs
